--- a/index.html
+++ b/index.html
@@ -68,7 +68,30 @@
                     </li>     
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.youtube.com/@HKJOKGU" target="_blank"><i class="fab fa-youtube"></i></a>
-                    </li>          
+                    </li> 
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="navbar-toggler-icon"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="index.html">首頁</a></li>
+                            <li><a class="dropdown-item" href="club background.html">總會背景及歷史</a></li>
+                            <li><a class="dropdown-item" href="club structure.html">總會架構</a></li>
+                            <li><a class="dropdown-item" href="ContactUs.html">聯絡我們</a></li>
+                        <li><a class="dropdown-item" href="how to play.html">韓式足網球玩法</a></li>
+                        <li><a class="dropdown-item" href="hongkong team.html">中國香港代表隊</a></li>
+                        <li><a class="dropdown-item" href="TrainClass.html">訓練班及比賽</a></li>
+                        <li><a class="dropdown-item" href="coach.html">教練</a></li>
+                        <li><a class="dropdown-item" href="referee.html">裁判</a></li>
+                        <li><a class="dropdown-item" href="album.html">相庫</a></li>
+                        <li><a class="dropdown-item" href="equipment.html">器材</a></li>
+                        <li><a class="dropdown-item" href="Cooperating institutions.html">合作機構</a></li>
+                        <li><a class="dropdown-item" href="Sponsors.html">贊助商</a></li>
+                        <li><a class="dropdown-item" href="announcement.html">公告</a></li>
+                    </ul>
+                    </li>
+                    
+
                 </ul>
             </div>
         </div>
@@ -89,7 +112,7 @@
             <div class="overlay"></div> <!-- 黑色覆蓋層 -->
             <div class="carousel-caption d-none d-md-block">
                 <h2 style="font-size: 60px;">提供足網球訓練班</h2>
-                <h1 style="font-size: 75px;">代表<span style="color: red">香港</span>出席比賽</h1>
+                <h1 style="font-size: 75px;">代表<span style="color: red">中國香港</span>出席比賽</h1>
             </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
@@ -281,7 +304,7 @@
                 <div class="row">
                     <div class="col-md-12 " text-center>
                         <div class="upper">
-                             <h2>準備好體驗我們的足網球訓練班?</h2>
+                             <h2 >準備好體驗我們的足網球訓練班?</h2>
                              <div class="lower">
                                 <img id='icon' src="img/icon(去背).png">
                                 <button class="contact-us-button" onclick="ContactUsPage()">立即聯絡我們</button>
